# plug-and-trust-seteec

./: CMakeLists.txt  CleanSpec.mk  git_commit_info.txt  version_info.txt
ext/: amazon-freertos.cmake  paho.cmake
hostlib/: version_info.txt
hostlib/hostLib/libCommon/infra/: sm_connect.c
hostlib/hostLib/libCommon/log/: nxLog_lpc55s_ns.c
hostlib/hostLib/platform/linux/: i2c_a7.c
hostlib/hostLib/se05x/: CMakeLists.txt
hostlib/hostLib/se05x/src/: se05x_tlv.c
nxp_iot_agent/: CMakeLists.txt  version_info.txt
nxp_iot_agent/doc/: offline_rtp_blockdiagram.vsdx
nxp_iot_agent/doc/protobuf/: Agent.options  Agent.proto  Apdu.proto  Datastore.proto  Dispatcher.options  Dispatcher.proto  Hostcmd.proto  RPC.options  RPC.proto  ServiceDescriptor.options  ServiceDescriptor.proto  Types.proto
nxp_iot_agent/ex/: CMakeLists.txt
nxp_iot_agent/ex/inc/: iot_agent_config.h  iot_agent_mqtt_paho.h  iot_agent_rtp_client.h
nxp_iot_agent/ex/src/: CMakeLists.txt  iot_agent_demo.c  openssl_conf_v111.cnf
nxp_iot_agent/ex/src/apps/: claimcode_inject_demo.c  remote_provisioning_client.c  sec-lvl-none.patch
nxp_iot_agent/ex/src/network/: iot_agent_network_lwip.c  iot_agent_network_qca.c
nxp_iot_agent/ex/src/nxp_iot_agent_demo_uwp/: package.appxManifest
nxp_iot_agent/ex/src/utils/: iot_agent_claimcode_inject.c  iot_agent_mqtt_freertos.c  iot_agent_mqtt_paho.c  iot_agent_rtp_client.c
nxp_iot_agent/ex/tools/edge-lock-device-link-rtp-server/: README.md  pom.xml
nxp_iot_agent/ex/tools/edge-lock-device-link-rtp-server/src/main/assembly/: assembly.xml
nxp_iot_agent/ex/tools/edge-lock-device-link-rtp-server/src/main/java/com/nxp/iot/devicelink/: ApduContainer.java  EcCurveParams.java  JsonProvisioning.java  RtpServer.java  TlvFrame.java  Utils.java
nxp_iot_agent/ex/tools/edge-lock-device-link-rtp-server/src/main/resources/: log4j2.xml
nxp_iot_agent/ext/: dirent_win32.h
nxp_iot_agent/inc/: nxp_iot_agent_config.h  nxp_iot_agent_datastore_fs.h  nxp_iot_agent_keystore_sss_se05x.h  nxp_iot_agent_macros.h  nxp_iot_agent_utils.h  nxp_iot_agent_ver.h
nxp_iot_agent/platform/mbedtls/: net_lwip.c  net_qca.c  network_mbedtls.c
nxp_iot_agent/platform/openssl/: network_openssl.c
nxp_iot_agent/src/: nxp_iot_agent.c  nxp_iot_agent_datastore_fs.c  nxp_iot_agent_keystore_sss_se05x.c  nxp_iot_agent_service.c  nxp_iot_agent_utils.c
nxp_iot_agent/src/common/: CMakeLists.txt  nxp_iot_agent_dispatcher.c
scripts/: android.cmake  cmake_features.py  cmake_options.cmake  cmake_options.h.in  cmake_options.mak.in  cmake_options.py  cmake_options.rst  cmake_options.sh  cmake_options_check.cmake  cmake_options_installed.cmake.in  cmake_options_values.cmake  cmake_options_values.rst.txt  create_cmake_projects.py  env_setup.bat  env_setup.sh  ksdk.cmake  ksdk_evkmimxrt1060.cmake  ksdk_frdmk64f.cmake  ksdk_lpcxpresso55s.cmake  native.cmake  version_info.py
scripts/android/aosp_based/: board_config.sh  build_script.sh  keymaster_flash.bat  setup_script.sh  vts_fips.patch
scripts/android/cmake_based/: board_config.sh  build_script.sh  keymaster_flash.bat  setup_script.sh
scripts/oob/: deep_integration_config.py
scripts/yocto/v03.01.00/: se05x_3.1.0.bb
semslite/: CMakeLists.txt  README.md  version_info.txt
semslite/doc/: 0010_flow_apis_no_signature.uml  0020_flow_with_signature.uml  0022_flow_api_success.uml  0025_flow_api_recovery.uml  0030_flow_apis_recovery_detection_scenario1.uml  0030_flow_apis_recovery_detection_scenario2.uml  0032_flow_recovery_recovery.uml  0041_flow_recovery_tear.uml  0050_flow_unexpected_power_off.uml  demo_update.rst  index.rst  sems_lite_agent_ver.rst.txt  sems_lite_api.rst  sems_lite_getCardcontent.uml  sems_lite_getPublickey.uml  sems_lite_getUUID.uml  sems_lite_known_issue.rst  sems_lite_mgmt_api.rst  sems_lite_overview.rst  sems_lite_package.rst  sems_lite_process.rst  sems_lite_usage.rst  tool_version_compatibility.csv
semslite/ex/: CMakeLists.txt
semslite/ex/sems_lite_cli_app/: CMakeLists.txt  cli_app_version_compatibility.csv  mfa_entry.c  mfa_process.c  mfa_process.h  mfa_process_tst.c  mfa_process_tst.h  mfa_utils.h  mfa_utls.c  nxp_mfa_utils.c  nxp_mfa_utils.h  readme.rst
semslite/ex/sems_lite_ex_update/: CMakeLists.txt  SEMS_Lite_UpgradeTo_iotDev-6_1_0-20200729-01_A397.h  SEMS_Lite_UpgradeTo_iotDev-6_1_0-20200729-01_SIM.h  readme.rst  sems_lite_ex_data.c  sems_lite_ex_update.c
semslite/lib/inc/: sems_lite_agent_common.h  sems_lite_agent_context.h  sems_lite_agent_handle.h  sems_lite_api.h  sems_lite_api_ver.h  sems_lite_keystore_se05x.h
semslite/lib/src/: sems_lite_agent.c  sems_lite_agent.h  sems_lite_agent_handle.c  sems_lite_api.c  sems_lite_keystore_se05x.c  sems_lite_mgmt_api.c
sss/plugin/openssl/engine/src/: ax_sssEngine_rsa.c
sss/plugin/pkcs11/: aws_pkcs11_pal.c
sss/src/se05x/: fsl_sss_se05x_apis.c
